// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrChipGroup renders correctly 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend--hidden"
  >
    
    test
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;

exports[`CdrChipGroup renders correctly with label visible 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend"
  >
    
    test
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;

exports[`CdrChipGroup renders label slot 1`] = `
<fieldset
  class="cdr-chip-group"
>
  <legend
    class="cdr-chip-group__legend"
  >
    
    hey im overriding here!!!
    
  </legend>
  <div
    class="cdr-chip-group__content"
  >
    
    <button
      aria-checked="true"
      class="cdr-chip"
      role="radio"
      tabindex="0"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 1
        
      </span>
    </button>
    <button
      aria-checked="false"
      class="cdr-chip"
      role="radio"
      tabindex="-1"
    >
      <!--v-if-->
      <!--v-if-->
      <span
        class="cdr-chip__content"
      >
        
        chip 2
        
      </span>
    </button>
    
  </div>
</fieldset>
`;
